fix (planning): correct production suggestion logic to consume shared stock